package com.dsq.repository;

/**
 * 导出格式枚举
 */
public enum ExportFormat {
    TEXT,  // 文本格式
    // 未来可以扩展 JSON, XML 等格式
}