@startuml PKM系统架构类图

skinparam {
  BackgroundColor White
  ArrowColor #2C3E50
  BorderColor #2C3E50
  Class {
    BackgroundColor #ECF0F1
    BorderColor #2C3E50
    FontSize 13
    AttributeFontSize 12
    MethodFontSize 11
  }
  Package {
    BackgroundColor #D6EAF8
    BorderColor #3498DB
  }
}

title 个人知识管理系统(PKM) - 架构类图

' 定义包
package "表现层" as presentation {
  class App {
    + main(String[]): void
  }

  package "app.cli" as cli {
    class CommandParser {
      - NoteController noteController
      - TagController tagController
      - Scanner scanner
      - boolean isRunning
      --
      + CommandParser()
      + parseArgs(String[]): void
      - startInteractiveMode(): void
      - executeCommand(String): void
      - handleNewCommand(String[]): void
      - handleListCommand(String[]): void
      - handleViewCommand(String[]): void
      - handleHelpCommand(): void
    }
  }

  package "app.controller" as controller {
    class NoteController {
      - NoteService noteService
      --
      + NoteController(NoteService)
      + createNote(String, String): void
      + listAllNotes(): void
      + viewNote(String): void
      + editNoteContent(String, String): void
      + deleteNote(String): void
      + searchNotes(String): void
    }

    class TagController {
      - TagService tagService
      --
      + TagController(TagService)
      + listAllTags(): void
      + showTagStatistics(): void
      + fuzzySearchByTag(String): void
    }
  }
}

package "业务逻辑层" as service {
  package "app.service" as appservice {
    interface StorageService {
      + saveNote(Note): void
      + findAllNotes(): List<Note>
      + findNoteById(String): Note
      + deleteNote(String): void
      + saveAllNotes(List<Note>): void
    }

    class NoteFileStorageService {
      - NoteFileRepository repository
      --
      + NoteFileStorageService()
      + NoteFileStorageService(String)
      + saveNote(Note): void
      + findAllNotes(): List<Note>
      + findNoteById(String): Note
      + deleteNote(String): void
      + saveAllNotes(List<Note>): void
    }

    class NoteService {
      - StorageService storageService
      --
      + NoteService(StorageService)
      + createNote(String, String): Note
      + getAllNotes(): List<Note>
      + getNoteById(String): Note
      + updateNoteContent(String, String): void
      + deleteNote(String): void
      + searchNotes(String): List<Note>
    }

    class TagService {
      - StorageService storageService
      - Map<String, List<Note>> tagIndex
      --
      + TagService(StorageService)
      + findNotesByTag(String): List<Note>
      + getAllTags(): Set<String>
      + getTagStatistics(): Map<String, Integer>
      + fuzzySearchByTag(String): List<Note>
    }
  }
}

package "数据访问层" as repository {
  package "repository" as repo {
    class NoteFileRepository {
      - String dataFilePath
      --
      + NoteFileRepository()
      + NoteFileRepository(String)
      + saveNotes(List<Note>): void
      + loadNotes(): List<Note>
      + exportToTextFile(List<Note>, String): void
    }

    enum ExportFormat {
      TEXT
    }
  }
}

package "领域模型层" as domain {
  class Note {
    - String id
    - String title
    - String content
    - List<String> tags
    - LocalDateTime createdAt
    - LocalDateTime updatedAt
    --
    + Note(String, String)
    + Note(String, String, String)
    + addTag(String): void
    + removeTag(String): void
    + hasTag(String): boolean
    + getTags(): List<String>
  }

  class TextNote {
    - String summary
    --
    + TextNote(String, String)
    + TextNote(String, String, String)
    + TextNote(String, String, String, String)
    + getSummary(): String
    + setSummary(String): void
  }

  class Tag {
    - String id
    - String name
    --
    + Tag()
    + Tag(String)
    + Tag(String, String)
  }
}

package "基础设施层" as infrastructure {
  package "exception" as excp {
    class PKMException {
      - String errorCode
      --
      + PKMException(String, String)
      + PKMException(String, String, Throwable)
      + getErrorCode(): String
    }

    class FileOperationException {
      + FileOperationException(String, String, Throwable)
      + FileOperationException(String, String, String)
    }

    class SerializationException {
      + SerializationException(String, Throwable)
      + SerializationException(String, String)
    }
  }
}

' 继承关系
Note <|-- TextNote
PKMException <|-- FileOperationException
PKMException <|-- SerializationException

' 实现关系
StorageService <|.. NoteFileStorageService

' 依赖关系
App --> CommandParser
CommandParser --> NoteController
CommandParser --> TagController

NoteController --> NoteService
TagController --> TagService

NoteService --> StorageService
TagService --> StorageService
NoteFileStorageService --> NoteFileRepository

NoteService --> Note
TagService --> Note
NoteFileRepository --> Note
NoteFileRepository --> ExportFormat



' 关联关系
NoteController ..> NoteService : 依赖
TagController ..> TagService : 依赖

NoteFileStorageService ..> NoteFileRepository : 使用

@enduml